--- a/src/main/resources/lang/fr/fr-FR.txt
+++ b/src/main/resources/lang/fr/fr-FR.txt
@@ -54,7 +54,7 @@ conflictSpawn=Les chunks d'apparition interfèrent avec ce portail !
 
 # Economy
 ecoDeduct=Déduction de %cost%.
-ecoObtain=Obtenu %cost% par Stargate %portal% !
+ecoObtain=Obtenu %cost% par StarGate %portal% !
 ecoInsolvent=Fonds insuffisants !
 
 #Terminology
