--- a/src/main/resources/lang/it/config_it-IT.txt
+++ b/src/main/resources/lang/it/config_it-IT.txt
@@ -11,35 +11,35 @@ subheaderCompat=Compatibilità
 subheaderLogging=Registrazione
 subheaderDebug=Debug
 descriptionCompatibility=Queste impostazioni sono fornite per migliorare le interazioni di SG con altri plugin.
-descriptionLogging=Quante informazioni dovrebbero essere inviate da Stargate alla console?     
+descriptionLogging=Quante informazioni dovrebbero essere inviate da StarGate alla console?     
 descriptionDebug=Queste informazioni sono fornite per aiutare gli sviluppatori a diagnosticare i problemi con questo plugin. 
 tagNote=NOTA
 
 # General Preferences
-languageL1=Quale lingua sarà utilizzata da Stargate durante la comunicazione con i tuoi utenti?
+languageL1=Quale lingua sarà utilizzata da StarGate durante la comunicazione con i tuoi utenti?
 languageL2=Valori supportati: %values%
 languageL4=Se SG non è ancora disponibile nella tua lingua, sei pregato di considerare di diventare un traduttore:
 bungee.UsingBungeeL1=Sei connesso a un proxy compatibile con Bungee?
 bungee.usingBungeeL2=Impostalo a 'true' se intendi creare dei portali con il flag 'u'.
-bungee.useRemoteDatabaseL1=Di Default, Stargate utilizza un database locale di SQLite per memorizzare i suoi dati.
+bungee.useRemoteDatabaseL1=Di Default, StarGate utilizza un database locale di SQLite per memorizzare i suoi dati.
 bungee.useRemoteDatabaseL3=Se stai operando un server grande, consigliamo di utilizzare un database remoto.
 bungee.useRemoteDatabaseL4=Nota che un simile database è necessario, se intendi generare portali con il flag 'i'.
 bungee.remoteDatabaseSettings.L1=Applicabile soltanto se useRemoteDatabase è true.
-bungee.remoteDatabaseSettings.driverL1=Quale driver dovrebbe essere utilizzato da Stargate per connettersi al tuo database?
+bungee.remoteDatabaseSettings.driverL1=Quale driver dovrebbe essere utilizzato da StarGate per connettersi al tuo database?
 bungee.remoteDatabaseSettings.driverL2=Correntemente, questi sono supportati: %values%
-bungee.remoteDatabaseSettings.addressL1=Dove può Stargate trovare il tuo database?
-bungee.remoteDatabaseSettings.useSSLL1=Stargate dovrebbe utilizzare SSL connettendosi al tuo database?
-bungee.remoteDatabaseSettings.databaseL1=Il nome del database che Stargate utilizzerà per memorizzare i suoi dati. Deve essere già esistente.
-bungee.remoteDatabaseSettings.databaseL2=Se stai utilizzando Bungee, dovrebbe essere condiviso da tutte le istanze di Stargate.
+bungee.remoteDatabaseSettings.addressL1=Dove può StarGate trovare il tuo database?
+bungee.remoteDatabaseSettings.useSSLL1=StarGate dovrebbe utilizzare SSL connettendosi al tuo database?
+bungee.remoteDatabaseSettings.databaseL1=Il nome del database che StarGate utilizzerà per memorizzare i suoi dati. Deve essere già esistente.
+bungee.remoteDatabaseSettings.databaseL2=Se stai utilizzando Bungee, dovrebbe essere condiviso da tutte le istanze di StarGate.
 bungee.remoteDatabaseSettings.usernameL1=Credenziali da utilizzare per la connessione:
-bungee.remoteDatabaseSettings.advancedDatabaseConfigurationL1=Dovremmo generare un file di configurazione del database ('hikari.properties') nella tua cartella di Stargate?
+bungee.remoteDatabaseSettings.advancedDatabaseConfigurationL1=Dovremmo generare un file di configurazione del database ('hikari.properties') nella tua cartella di StarGate?
 bungee.remoteDatabaseSettings.advancedDatabaseConfigurationL2=Così facendo, tutte le remoteDatabaseSettings di cui sopra saranno ignorate, in favore del nuovo file!
 bungee.remoteDatabaseSettings.advancedDatabaseConfigurationL4=Ciò ti consente di utilizzare le funzionalità RDMS avanzate, quali limiti di pool, dimensioni della cache, etc.
 bungee.remoteDatabaseSettings.advancedDatabaseConfigurationL5=Un elenco delle impostazioni disponibili si può trovare a questo link: %link%.
 defaultGateNetworkL1=Quale rete sarà utilizzata quando nessuna ne è specificata? (Lunghezza massima: 12 caratteri)
 defaultGateNetworkL3=Nota che, ciò, si applica principalmente agli utenti con il nodo stargate.create.network.
 defaultGateNetworkL4=Generalmente, quel nodo è dato al personale (consigliamo stargate.create.personal per gli utenti).
-defaultTerminalNetworkL1=Quale rete sarà riservata ai portali del terminale ('T') da Stargate?
+defaultTerminalNetworkL1=Quale rete sarà riservata ai portali del terminale ('T') da StarGate?
 defaultTerminalNetworkL3=Generalmente, questa funzionalità è utilizzata per generare un gruppo di portali noto come 'Terminale'.
 defaultTerminalNetworkL4=Utilizzando questa rete, i giocatori possono pagare per connettere le proprie città/basi/negozi/etc. al terminale.
 defaultTerminalNetworkL6=Non ancora implementato!
@@ -47,29 +47,29 @@ defaultTerminalNetworkL7=Il supporto al terminale è previsto per la %version%!
 
 # Gate Behaviour
 networkLimitL1=Qual è il numero massimo di portali che una singola rete può contenere? (-1 per illimitati)
-handleVehiclesL1=I veicoli e loro passeggeri potranno viaggiare attraverso i portali di Stargate?
+handleVehiclesL1=I veicoli e loro passeggeri potranno viaggiare attraverso i portali di StarGate?
 handleVehiclesL2=carrelli da miniera, barche e mob con sella = veicoli | giocatori e mob = passeggeri
 handleLeashedCreaturesL1=Se un giocatore si teletrasporta mentre attaccato con un guinzaglio a un'entità, SG dovrebbe teletrasportare anche l'entità?
 CheckPortalValidityL1=Il server verificherà nuovamente tutti i portali esistenti, all'avvio?
 CheckPortalValidityL3=Ciò verifica che i portali previsti siano presenti e stiano utilizzando una disposizione valida.
 CheckPortalValidityL4=Progettato per identificare le modifiche al file .gate, le modifiche al mondo e la rigenerazione del terreno.
-destroyOnExplosionL1=Gli Stargate possono esser rotti da un'esplosione?
+destroyOnExplosionL1=Gli StarGate possono esser rotti da un'esplosione?
 destroyOnExplosionL2=[tnt, creeper, etc.]
 gateExitSpeedMultiplierL1=A quale velocità dovrebbero i giocatori esser espulsi dai portali?
 gateExitSpeedMultiplierL2=Uscendo da un portale, i giocatori mantengono la loro velocità di movimento originale, moltiplicata per questo valore.
 
 # Economy
-useEconomyL1=Stargate interagirà con l'economia del tuo server?
-useEconomyL3=Per queste funzionalità, Stargate dipende dal plugin Vault.
+useEconomyL1=StarGate interagirà con l'economia del tuo server?
+useEconomyL3=Per queste funzionalità, StarGate dipende dal plugin Vault.
 taxAccountL1=Il tuo server ha un conto fiscale (economia chiusa)?
 taxAccountL2=Se sì, sei pregato di fornire il tuo conto fiscale (il denaro raccolto sarà inviato a esso).
 taxAccountL3=Altrimenti, lascia vuota questa sezione (il denaro raccolto sarà eliminato).
 TaxAccountL5=Nota che il denaro 'usageCost' è escluso da questo sistema, quando gateOwnerRevenue è 'true'.
 creationCostL1=Quanto sarà detratto dai conti dei giocatori alla creazione di un nuovo portale?
 destructionCostL1=Quanto sarà detratto dai conti dei giocatori alla distruzione di un portale esistente?
-usageCostL1=Quanto sarà detratto dai conti dei giocatori all'utilizzo di uno Stargate per teletrasportarsi?
-usageCostL2=Ciò non si applica agli Stargate con il flag 'f'.
-gateOwnerRevenueL1=Le tariffe raccolte per 'usecost' saranno pagate a chiunque abbia creato (possieda) lo Stargate in questione?
+usageCostL1=Quanto sarà detratto dai conti dei giocatori all'utilizzo di uno StarGate per teletrasportarsi?
+usageCostL2=Ciò non si applica agli StarGate con il flag 'f'.
+gateOwnerRevenueL1=Le tariffe raccolte per 'usecost' saranno pagate a chiunque abbia creato (possieda) lo StarGate in questione?
 gateOnwerRevenueL2=Se 'false', i fondi raccolti saranno eliminati (o inviati al taxAccount).
 chargeFreeDestinationL1='creationCost' sarà comunque addebitato, se la destinazione del nuovo portale è un portale con il flag 'f'?
 chargeFreeDestinationL2=Nota che, ciò, si applica esclusivamente ai portali fissi.
@@ -77,7 +77,7 @@ chargeFreeDestinationL2=Nota che, ciò, si applica esclusivamente ai portali fis
 # Aesthetic Tweaks
 signFormattingL1=Queste impostazioni sono utilizzate per personalizzare i colori e stili utilizzati da SF, alla formattazione dei cartelli.
 signFormattingL2=Per opzioni di stile più avanzate, sei pregato di utilizzare https://sgrewritten.org/extraColours
-signFormatting.color.L1=Il colore predefinito del testo su tutti i cartelli dello Stargate (la luminosità varia a seconda del materiale del cartello)
+signFormatting.color.L1=Il colore predefinito del testo su tutti i cartelli dello StarGate (la luminosità varia a seconda del materiale del cartello)
 signFormatting.color.L2=Un elenco dei colori validi si può trovare su https://sgrewritten.org/colourTypes
 signFormatting.pointerBehaviourL1=SG evidenzia le destinazioni selezionate dai giocatori con il simbolo di una lancetta, allo scorrimento dell'utente.
 signFormatting.pointerBehaviourL2=Come dovrebbe essere stilizzato il simbolo di una lancetta da SG? (https://sgrewritten.org/pointerStyles)
@@ -91,7 +91,7 @@ disableCustomColoredNamesL4=SG dovrebbe disabilitare tale comportamento, forzand
 rememberLastDestinationL1=L'ultimo portale in rete di destinazione connesso sarà elencato per primo nel menu di scorrimento?
 
 #Technical
-portalFileL1=Quando useRemoteDatabase è 'false', Stargate memorizza tutti i dati del suo portale in un flatfile.
+portalFileL1=Quando useRemoteDatabase è 'false', StarGate memorizza tutti i dati del suo portale in un flatfile.
 portalFileL2=Come dovrebbe esser denominato questo flatfile?
 gateFolderL1=Correntemente, all'avvio, le disposizioni del portale sono ricercate in una cartella, memorizzata come '.gate'.
 gateFolderL2=Dove si trova quella cartella?
@@ -111,7 +111,7 @@ loggingLevelL10=Consigliato per la risoluzione dei problemi di base
 loggingLevelL11=Stampa informazioni di debug limitate. Stampa eventi generici del plugin (caricamento, disabilitazione, connessioni, etc.).
 loggingLevelL12=Consigliato per alcuni sviluppatori di addon.
 loggingLevelL13=Stampa gran parte delle info di debug. Stampa messaggi dettagliati sulla logica e comportamento del plugin.
-LoggingLevelL14=Utilizzato soltanto dal team di sviluppo principale di Stargate
+LoggingLevelL14=Utilizzato soltanto dal team di sviluppo principale di StarGate
 LoggingLevelL15=Stampa tutto. Stampa letteralmente tutto, incluse numerose tracce dello stack.
 configVersionL1=Un valore interno, utilizzato dal plugin per determinare l'età della tua configurazione.
 configVersionL2=Sei pregato di non modificarlo.
