--- a/src/main/resources/lang/de/de-DE.txt
+++ b/src/main/resources/lang/de/de-DE.txt
@@ -53,7 +53,7 @@ conflictSpawn=Spawn-Chunks stören dieses Portal!
 
 # Economy
 ecoDeduct=%cost% abgezogen .
-ecoObtain=%cost% von Stargate %portal% erhalten!
+ecoObtain=%cost% von StarGate %portal% erhalten!
 ecoInsolvent=Unzureichende Mittel
 
 #Terminology
@@ -75,5 +75,5 @@ unimplementedFlag=Die %flags% Flags sind noch nicht implementiert.
 #Admin
 adminReload=Konfiguration wurde neu geladen!
 adminInfo=Version %version%wird ausgeführt. Changelog: https://git.io/JD4Q
-adminHelp=Stargate's Dokumentation finden Sie unter https://git.io/JDclf
+adminHelp=StarGate's Dokumentation finden Sie unter https://git.io/JDclf
 translatedBy=EduardBaer & Matriarch!
